--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "truffle-core",
-  "namespace": "consensys",
-  "version": "4.0.4",
-  "description": "Core code for Truffle command line tool",
+  "name": "truffle-core-migrate-without-compile",
+  "namespace": "unknown",
+  "version": "4.0.7",
+  "description": "Core code for Truffle command line tool -temporary fix by orenyodfat",
   "dependencies": {
     "async": "^1.4.2",
     "chai": "^3.3.0",
@@ -12,11 +12,11 @@
     "debug": "^3.1.0",
     "del": "^2.2.0",
     "diff": "1.4.0",
-    "ganache-cli": "6.0.3",
     "ethpm": "0.0.15",
     "ethpm-registry": "0.0.10",
     "finalhandler": "^0.4.0",
     "fs-extra": "^2.0.0",
+    "ganache-cli": "6.0.3",
     "lodash": "^4.5.1",
     "mkdirp": "^0.5.1",
     "mocha": "^3.2.0",
@@ -26,6 +26,7 @@
     "serve-static": "^1.10.0",
     "spawn-args": "^0.1.0",
     "temp": "^0.8.3",
+    "truffle": "^4.0.4",
     "truffle-artifactor": "^3.0.2",
     "truffle-box": "^1.0.3",
     "truffle-compile": "^3.0.4",
@@ -41,7 +42,7 @@
     "truffle-provider": "^0.0.4",
     "truffle-provisioner": "^0.1.0",
     "truffle-require": "^1.0.5",
-    "truffle-resolver": "^4.0.1",
+    "truffle-resolver-fix-relative-path-issue": "^4.0.1",
     "truffle-solidity-utils": "^1.1.0",
     "web3": "^0.20.1",
     "yargs": "^6.6.0"
